# dj-game-server

./: main.py  pyproject.toml
core/: settings.py  urls.py
runs/: admin.py  api.py  default_template.json  models.py  schemas.py  services.py
runs/migrations/: 0001_initial.py  0002_run_participants_run_pending_players.py  0003_run_pending_claims.py
tests/: conftest.py  test_auth_api.py  test_runs_api.py  test_security.py
users/: admin.py  api.py  auth.py  models.py  schemas.py  security.py
users/migrations/: 0001_initial.py
