[project]
name = "dj-game-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-ninja>=1.6.2",
    "django-ninja-extra>=0.31.4",
    "email-validator>=2.3.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.3",
    "pytest-django>=4.12.0",
]
